# poetry-demo-project

./: .gitignore  README.md  pyproject.toml
demo_project/: main.py
